--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,6 +1,6 @@
 /* import the required JSAPI css */
 
-@import 'https://js.arcgis.com/4.6/esri/css/main.css';
+@import 'https://js.arcgis.com/4.19/esri/themes/light/main.css';
 #viewDiv {
     position: absolute;
     top: 4rem;
