--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,1 +1,21 @@
-<div id='viewDiv'></div>
+<div>
+    <div id='viewDiv'></div>
+    <div id="side-bar">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div id="display-box-1" class="display-box">box 1</div>
+                </div>
+                <div class="col">
+                    <div id="display-box-2" class="display-box">box 2</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div id="display-box-3">box 3</div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
