--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -4,15 +4,15 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div id="display-box-1" class="display-box">Your Total Running Distance: {{ totalDistance }} m</div>
+                    <div id="display-box-1" class="display-box">Your Total Running Distance: {{ totalDistance }} m. </div>
                 </div>
                 <div class="col">
-                    <div id="display-box-2" class="display-box">Your Burned Calories: {{ 'totalCal' }}</div>
+                    <div id="display-box-2" class="display-box">Your Burned Calories: {{ totalCal }} kCal. </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <div id="display-box-3">Your Current Running Speed: {{ 'currSpeed' }}</div>
+                    <div id="display-box-3">Your Current Running Speed: {{ Speed[Speed.length-1] }} km/h. </div>
                 </div>
             </div>
         </div>
