--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -20,7 +20,9 @@
     width: 98%;
     height: 40%;
     min-height: 200px;
-    background: brown;
+    background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+    box-shadow: 6px 6px 20px rgba(122, 122, 122, 0.212);
+    border-radius: 2rem;
 }
 
 .col {
@@ -28,13 +30,19 @@
 }
 
 .display-box {
-    background-color: blueviolet;
+    background: linear-gradient( to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
     height: 40%;
     min-height: 100px;
+    border-radius: 1rem;
+    padding: 1rem;
+    box-shadow: 6px 6px 20px rgba(122, 122, 122, 0.212);
 }
 
 #display-box-3 {
-    background-color: aqua;
+    background: linear-gradient( to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
     height: 40%;
     min-height: 100px;
+    border-radius: 1rem;
+    padding: 1rem;
+    box-shadow: 6px 6px 20px rgba(122, 122, 122, 0.212);
 }
